--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node server/server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production node server/server.js",
     "test": "ENDPOINT_PORT=8000 jest",
     "test:watch": "ENDPOINT_PORT=8000 jest --watch",
     "test:coverage": "ENDPOINT_PORT=8000 jest --coverage"
@@ -16,19 +16,28 @@
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
+    "async": "^3.2.0",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
+    "cogo-toast": "^4.2.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-validator": "^5.3.1",
     "isomorphic-unfetch": "^3.0.0",
+    "konva": "^4.2.2",
     "mysql": "^2.17.1",
     "net": "^1.0.2",
     "next": "^9.1.2",
     "nprogress": "^0.2.0",
     "react": "^16.11.0",
+    "react-chartjs-2": "^2.9.0",
+    "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.11.0",
+    "react-konva": "^16.12.0-0",
+    "router": "^1.3.5",
     "serve-favicon": "^2.5.0",
     "serverless-mysql": "^1.4.0",
     "socket.io": "^2.2.0",
